<resources>
    <string name="app_name">deneme</string>
    <string name="title_activity_maps">Map</string>

    <string name="historical_place_id">4deefb944765f83613cdba6e</string>
    <string name="museum_id">4bf58dd8d48988d181941735</string>

    <string name="get_places_list_error">Error occurred when closing inputStream.</string>
    <string name="create_url_error">Error occurred when creating url.</string>
    <string name="error_code">Error response code: </string>
    <string name="retrieving_json_error">Problem occurred when retrieving the news JSON results.</string>
    <string name="parsiong_json_error">Problem occurred when parsing the news JSON results.</string>
    <string name="show_date_error">Error occurred when showing datePicker.</string>

    <string name="go_my_location">Go my Location</string>
    <string name="location_tracker">Location Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_museum">Museums</string>
    <string name="navigation_drawer_restaurant">Restaurants</string>
    <string name="navigation_drawer_historical_place">Historical Places</string>
    <string name="navigation_drawer_transportation">Transportations</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_zoom_level">Zoom Level</string>
    <string name="navigation_drawer_zoom_settings">Zoom Level Settings</string>
</resources>
